# load-balancer

./: Cargo.toml  README.md
migrations/: 20241201_create_table.sql
migrations/postgres/: 20241201_create_table.sql
migrations/sqlite/: 20241201_create_table.sql
src/: error.rs  lib.rs  load_balancer.rs  main.rs
src/data_store/: db.rs  error.rs  mod.rs  table.rs  worker.rs
src/domain/: database.rs
src/load_balancer/: load_balancer.rs  mod.rs  worker_hosts.rs
src/service/: db_connector.rs  mod.rs  postgres.rs  sqlite.rs
src/utils/: constants.rs  datafusion.rs  helpers.rs  mod.rs
