[package]
name = "load-balancer"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14.25", features = ["full"] }
tokio = { version = "1.26.0", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
regex = "1"
dotenvy = "0.15.7"
lazy_static = "1.4.0"
thiserror = "2"
color-eyre = "0.6"