[package]
name = "load-balancer"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.78"
bytes = "1.8.0"
dotenvy = "0.15.7"
color-eyre = "0.6"
chrono = { version = "0.4", features = ["serde"] }
datafusion = "43"
itertools = "0.13"
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
lazy_static = "1.4.0"
regex = "1"
reqwest = "0.12"
sqlx = { version = "0.8", features = ["postgres", "sqlite", "runtime-tokio-rustls", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
secrecy = { version = "0.8.0", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
thiserror = "2"